templates for tc name / year lookup
