# nodejs-server/service/TcService.js
@@ -186,3 +186,58 @@ exports.findTCbyDateRange = function(startDate,endDate) {
   });
 }
 
+
+/**
+ * find a tropical cyclone by name and year
+ *
+ * returns tcSchema
+ **/
+exports.findTCbyNameYear = function() {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "endDate" : "2000-01-23T04:56:07.000+00:00",
+  "year" : 6.027456183070403,
+  "num" : 0.8008281904610115,
+  "name" : "name",
+  "_id" : "_id",
+  "source" : "source",
+  "trajData" : [ {
+    "date" : "date",
+    "pres" : 7.061401241503109,
+    "geoLocation" : {
+      "coordinates" : [ [ 6.027456183070403, 6.027456183070403 ], [ 6.027456183070403, 6.027456183070403 ] ],
+      "type" : "type"
+    },
+    "season" : 9.301444243932576,
+    "lon" : 5.637376656633329,
+    "time" : 1.4658129805029452,
+    "class" : "class",
+    "lat" : 5.962133916683182,
+    "wind" : 2.3021358869347655,
+    "timestamp" : "2000-01-23T04:56:07.000+00:00"
+  }, {
+    "date" : "date",
+    "pres" : 7.061401241503109,
+    "geoLocation" : {
+      "coordinates" : [ [ 6.027456183070403, 6.027456183070403 ], [ 6.027456183070403, 6.027456183070403 ] ],
+      "type" : "type"
+    },
+    "season" : 9.301444243932576,
+    "lon" : 5.637376656633329,
+    "time" : 1.4658129805029452,
+    "class" : "class",
+    "lat" : 5.962133916683182,
+    "wind" : 2.3021358869347655,
+    "timestamp" : "2000-01-23T04:56:07.000+00:00"
+  } ],
+  "startDate" : "2000-01-23T04:56:07.000+00:00"
+};
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
